manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${IMAGE_NAME}-svc
  namespace: ${NAMESPACE}
  labels:
    app: ${IMAGE_NAME}
    environment: ${CI_ENVIRONMENT_NAME}
    servicecode: ${CMDB_SERVICE_CODE}
    projectID: "${CI_PROJECT_ID}"
    pipelineID: "${CI_PIPELINE_ID}"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: ${IMAGE_NAME}
    environment: ${CI_ENVIRONMENT_NAME}
